# Template_CMake

./: .gitignore  CMakeLists.txt  Init.bat  README.md
Editor/: CMakeLists.txt
Editor/Include/: Engine.cpp  Engine.h  Main.cpp  Main.h  Window.cpp  Window.h  WindowsProject1.aps  WindowsProject1.rc  framework.h  resource.h
Engine/: CMakeLists.txt
Engine/Include/: Core.h
Engine/Plugins/Includes/: MathLibrary.h
Engine/Plugins/lib/: lib_crt.lib
Engine/Source/Core/: Core.cpp
